turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:14: error: value otange is not a member of object java.awt.Color
	setCouleur(Color.otange)
                         ^